<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="priceperliter">Preço por litros</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spend">Seu gasto Será de:</string>
    <string name="rs_0">R$ 0</string>
    <string name="calculate">calcular</string>
    <string name="validation_fill_all_fields">prencha todos os campos</string>
</resources>